--- a/src/sass/abstracts/_colors.scss
+++ b/src/sass/abstracts/_colors.scss
@@ -1,8 +1,14 @@
 $clr-hot:hsl(48,100%,54%);
 $clr-tae: #997D0C;
 $clr-warm:hsl(48,100%,76%);
+$clr-lightcyan:hsl(182,63%,93%);
+$clr-lightercyan:hsl(182,63%,95%);
+$clr-darkcyan:hsl(182,63%,30%);
+$clr-cooldark:hsl(184, 63%, 38%);
 $clr-cool:hsl(184, 63%, 48%);
-$clr-go:hsl(134, 89%, 66%);
+$clr-coollight:hsl(184, 63%, 78%);
+$clr-golight:hsl(134, 89%, 66%);
+$clr-go:hsl(165, 60%, 50%);
 $clr-alarm:hsl(306,80%,54.9%);
 $clr-logo:hsl(199,82%,45%);
 $clr-title:hsl(260,73%,54%);
