--- a/src/sass/abstracts/_font.scss
+++ b/src/sass/abstracts/_font.scss
@@ -13,3 +13,4 @@ $fnt-info: 'Cabin',  Arial;
 $fnt-button: 'Cabin',  Arial;
 $fnt-clock: 'Orbitron',  Arial;
 $fnt-check: 'Lato', sans-serif;
+$fnt: 'Roboto',  Arial;
