--- a/src/sass/components/_content.scss
+++ b/src/sass/components/_content.scss
@@ -1,16 +1,41 @@
 @use'../abstracts' as *;
 
+body{
+    background-color: rgb(243, 243, 243);
+}
 .content {
     // outline: 1px solid;
     // *{
     //     outline: 1px solid ;
     // }
-    transform: translateY(79px);    
+    transform: translateY(15em);    
     display:grid;
     place-items: center;
     font-size: .7rem;
+    background-color: rgba(255, 255, 255, .7);
+    // min-height: 75vh;
+    .wrapper {
+        width:100%;
+        background-color:$clr-surface;
+        min-height: 75vh;
+    }
     aside {
         display:none;
+        background-color:hsl(48,100%,95%) ;
+        min-height: 75vh;
+
+    }
+    .TimelineContainer{
+        width: 100%;
+    }
+    
+    .createDocContainer {
+        // border: 1px solid;
+        width: 100%;
+        display: block;
+    }
+    .timelineContainer {
+        display: block;
     }
 }
 
@@ -20,17 +45,30 @@
         display: grid;
         place-items: center;
         .wrapper {
-            width:750px;
+            width:800px;
+            height: 100%;
+
             display: grid;
-            grid-template-columns: 15em auto;
+            grid-template-columns: 32em auto;
             grid-template-rows: auto auto;
+            
             aside {
                 grid-column: 1 / 2;
                 grid-row: 1 / 2;
                 display:block;
-                border: 1px solid lightgray;
+                // border: 1px solid lightgray;
+
             }
 
+        }
+
+    }
+}
+
+@media screen and (min-width:1200px) {
+    .content {
+        .wrapper {
+            width:1200px;
         }
 
     }
