--- a/src/sass/components/_toolBar.scss
+++ b/src/sass/components/_toolBar.scss
@@ -2,17 +2,27 @@
 
 .toolbar {
     width: 100%;
-    background:$clr-warm;
-    transform: translateY(79px);   
+    background:hsl(184,62%,48%);
+    transform: translateY(7.6em);   
+    position:fixed;
+    z-index: 998;
+    height:3em;
 
+    display: grid;
+    place-items: center;
+
+    // *{
+    //     outline: 1px solid ;
+    // }
     .tbContainer {
+        margin-top: 2px;;
         display: grid;
         grid-template-columns: auto auto;
         align-content: center;
-        padding: .5em;
+        padding: .3em;
+        width: 100%;
         .btntoolbarhidden {
             place-self: center;
-            margin: 1px;
             background: transparent;
             border: 0;
             border-radius: 0;
@@ -20,61 +30,91 @@
             text-align: center;
             text-decoration: none;
           }
-        .btntoolbar {
-            width: 75px;
+        .btntoolbar {            
+            margin-top: 1px;
+            // border: 1px solid magenta;
+            width: 80px;
             place-self: center;
+            align-self: center;
             cursor: pointer;
-            background: hsl(48,100%,76%);
-            border: 0px solid;
-            padding: 5px;
+            background: hsl(184,62%,68%);
+            
+            padding: 4px;
             border-radius: 99em;
-            font-size: .7rem;
+            font-size: 1rem;
             // transition: 0.2s ease;
+            // transform: translateY(3px);
             display: grid;
             grid-template-columns: 1fr 1fr 1fr;
             place-content: center;
+            div{
+                padding: 1px;
+            }
             img {
-                width: 1.1em;
-    
+                width: .95em;
+                margin: 1px;
             }
           }
         .btntoolbarhidden:hover .btntoolbar {
             filter: brightness(1.05);
           }
         .searchbar {
-            font-size: .7rem;
+            // outline: 1px solid;
+            // * {
+            //     outline: 1px solid;
+            // }
+            font-size: 1rem;
             display: flex;
             place-content: flex-end;
-            .searchContent {
-                display: grid;
-                grid-template-columns: 4em 8em 5em;
-                place-items: center;
-                width: 15em;
-                img{
-                    width: 2.3em;
-                    transform: translateX(-1.2em);
-                }
-            }
-            .whiteBox {
-                width: 8em;
-                height: 20px;
-                background: white;
-                border-radius: .5em;
+            place-items: center;
+            height: 100%;
+
+            // .searchContent {
+            //     display: grid;
+            //     grid-template-columns: 4em 8em 5em;
+            //     place-items: center;
+            //     width: 15em;
+            //     img{
+            //         width: 2.3em;
+            //         transform: translateX(-1.2em);
+            //     }
+            // }
+            // .whiteBox {
+            //     width: 8em;
+            //     height: 27px;
+            //     background: white;
+            //     border-radius: .5em;
                 
-            }
+            // }
         }
     }
 }
 
 @media screen and (min-width:800px) {
     .toolbar {
+        // *{
+        //     outline: 1px solid;
+
+        // }        
         display: grid;
         place-items: center;
+        
         // *{
         //     outline : 1px solid; 
         //    }
         .tbContainer {
+            // margin-top: 2PX;
+            padding: 0;
             width: 800px;
+        }
+    }
+}
+
+@media screen and (min-width:1200px) {
+    .toolbar {
+
+        .tbContainer {
+            width: 1200px;
         }
     }
 }
