--- a/src/sass/components/_timelinetl.scss
+++ b/src/sass/components/_timelinetl.scss
@@ -1,10 +1,10 @@
 @use'../abstracts' as *;
 
 .timeline-container{
-   border:1px solid lightgray;
-  //   *{
-  //     outline: 1px solid lightgray;
-  //   }
+  //  border:1px solid lightgray;
+    // *{
+    //   outline: 1px solid lightgray;
+    // }
     width:100%;
     height:100%;
     display: grid;
@@ -14,10 +14,11 @@
     outline: 1px solid $clr-outline;
     margin-right:0;
     padding-top: 1em;
+    background-color: $clr-surface;
     .timeline {
       outline: 1px solid $clr-outline;
       display:grid;
-      grid-template-columns: 5em 2em minmax(70px, 1fr) 4em;
+      grid-template-columns: 5em 3em minmax(70px, auto) 4em;
       grid-template-rows: 1fr;
       width: 100%;
       padding-left: 3em;
@@ -25,9 +26,9 @@
       
 
       .infoclass{
-        font-family: $fnt-info;
+        font-family: $fnt-title;;
         color: $clr-cool;
-        font-size: .7rem;
+        font-size: $rem-fonts1;
         display:grid;
         grid-template-columns: 1fr;
         justify-items: start;
@@ -40,14 +41,14 @@
         justify-items: end;
         
         font-family: $fnt-time;
-        font-size: .5rem;
+        font-size: $rem-smallfont;
       }
       .tl-date{
         display: flex;  
         justify-content: flex-end;
         place-items:center;   
         font-family: $fnt-time;
-        font-size: .5rem;
+        font-size: $rem-smallfont;
       }
       .tl-status{
         display:grid;
@@ -59,8 +60,8 @@
       }
       .tl-info {
         font-family: $fnt-title;
-        color: $clr-title;
-        font-size: 1rem;
+        color: black;
+        font-size: $rem-font;
         display:flex;
         justify-content: flex-left;
         place-items:center;
