--- a/src/sass/components/_timer.scss
+++ b/src/sass/components/_timer.scss
@@ -11,7 +11,7 @@
     grid-template-columns: 3em 1fr  ;
     grid-template-rows: 1fr;
     font-family: $fnt-button;
-    font-size:1em;
+    font-size:$rem-fonts1;
     color: darkgray;
   }
 
