--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -15,4 +15,5 @@
 @use 'components/footer';
 @use 'components/inputbox';
 @use 'components/createDoc';
+@use 'components/createTimeline';
 //sass --watch src/sass:dist/css
