--- a/src/sass/abstracts/_font.scss
+++ b/src/sass/abstracts/_font.scss
@@ -7,10 +7,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Lato');
 
-$fnt-time: 'Alumni Sans', sans-serif;
+$fnt-time: 'Cabin', Arial;
 $fnt-title: 'Roboto',  Arial;
 $fnt-info: 'Cabin',  Arial;
 $fnt-button: 'Cabin',  Arial;
 $fnt-clock: 'Orbitron',  Arial;
-$fnt-check: 'Lato', sans-serif;
+$fnt-check: 'Lato', Arial;
 $fnt: 'Roboto',  Arial;
