--- a/src/sass/abstracts/_measurement.scss
+++ b/src/sass/abstracts/_measurement.scss
@@ -5,6 +5,7 @@ $em-thickness: calc($em-circle-cross-diameter / 10);
 $rem-font:1rem;
 $rem-fonts1:.9rem;
 $rem-smallfont:.7rem;
+$rem-smallerfont:.6rem;
 $px-check: 14px;
 $px-border: calc(var($px-check) *.10);
 $px-innercircle: calc(var($px-check) *.4);
