--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -16,4 +16,5 @@
 @use 'components/inputbox';
 @use 'components/createDoc';
 @use 'components/createTimeline';
+@use 'components/login';
 //sass --watch src/sass:dist/css
