--- a/src/sass/components/_login.scss
+++ b/src/sass/components/_login.scss
@@ -2,7 +2,8 @@
 
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300);
 
-.test {
+.login {
+
     font-family: 'arial';
     color: white;
     font-weight: 300;
@@ -10,28 +11,29 @@
     margin: 0;
     padding: 0;
     font-weight: 300;
+    
 
-    .test ::-webkit-input-placeholder {
+    ::-webkit-input-placeholder {
     /* WebKit browsers */
     font-family: 'arial';
     color: white;
     font-weight: 300;
     }
-    .test :-moz-placeholder {
+    :-moz-placeholder {
     /* Mozilla Firefox 4 to 18 */
     font-family: 'arial';
     color: white;
     opacity: 1;
     font-weight: 300;
     }
-    .test ::-moz-placeholder {
+    ::-moz-placeholder {
     /* Mozilla Firefox 19+ */
     font-family: 'arial';
     color: white;
     opacity: 1;
     font-weight: 300;
     }
-    .test :-ms-input-placeholder {
+    :-ms-input-placeholder {
     /* Internet Explorer 10+ */
     font-family: 'arial';
     color: white;
@@ -42,21 +44,27 @@
     color:#ff0000;
     }
     /***** Login page css start *****/
+
     .wrapper {
-    background: #0c499b ;
-    background: #0c499b ;
-    background: #0c499b ;
+    background: hsl(184,62%,48%) ;
     position: absolute;
+    transform: translateY(7.6em);   
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 81vh;
     overflow: hidden;
+    
+        .form-success .container h1 {
+        -webkit-transform: translateY(85px);
+                transform: translateY(85px);
+        }
+        .form-success .container h1 {
+                -webkit-transform: translateY(85px);
+                        transform: translateY(85px);
+                }
     }
-    .wrapper.form-success .container h1 {
-    -webkit-transform: translateY(85px);
-            transform: translateY(85px);
-    }
+
     .container {
     max-width: 430px;
     margin: 0 auto;
@@ -64,24 +72,32 @@
     height: auto;
     text-align: center;
     width:100%;
+
     }
-    .wrapper.form-success .container h1 {
-    -webkit-transform: translateY(85px);
-            transform: translateY(85px);
-    }
+
     .form-elements {
     background-color: rgba(255, 255, 255, 0.4);
     padding: 50px 0;
+    border-radius: 50px;;
+    border:1px solid none;
     }
     .logo {
     margin: 0 auto;
     max-width: 300px;
     width: 100%;
     }
+    label{
+        margin-bottom: 10px;
+    }
     form {
     padding: 20px 0;
     position: relative;
     z-index: 2;
+    display: grid;
+    place-items: center;
+    grid-template-columns: 1fr;
+    grid-template-rows: .5fr 1fr .5fr 1fr 10em;
+
     }
     form input {
     -webkit-appearance: none;
@@ -115,14 +131,16 @@
         -moz-appearance: none;
             appearance: none;
     outline: 0;
-    background-color: #0c499b;
-    border: 0;
+    background-color:hsl(199,82%,45%);
+    border: 0;    
     padding: 10px 15px;
-    color: #fff;
+    color: white;
     border-radius: 3px;
     width: 280px;
     cursor: pointer;
     font-size: 18px;
+    border:1px solid none;
+    border-radius: 50px;
     -webkit-transition-duration: 0.25s;
             transition-duration: 0.25s;
     }
@@ -138,6 +156,11 @@
     width: 100%;
     height: 100%;
     z-index: 1;
+        img{
+                opacity: .03;
+                width: 100%;
+        }
+
     }
     .bg-bubbles li {
     position: absolute;
@@ -151,6 +174,8 @@
     animation: square 25s infinite;
     -webkit-transition-timing-function: linear;
     transition-timing-function: linear;
+    border:1px solid none;
+    border-radius: 50%;
     }
     .bg-bubbles li:nth-child(1) {
     left: 10%;
