--- a/src/sass/components/_toolBar.scss
+++ b/src/sass/components/_toolBar.scss
@@ -15,7 +15,7 @@
     //     outline: 1px solid ;
     // }
     .tbContainer {
-        margin-top: 2px;;
+        margin-top: 2px;
         display: grid;
         grid-template-columns: auto auto;
         align-content: center;
