--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -17,4 +17,5 @@
 @use 'components/createDoc';
 @use 'components/createTimeline';
 @use 'components/login';
+@use 'components/popup';
 //sass --watch src/sass:dist/css
