--- a/src/sass/components/_popupers.scss
+++ b/src/sass/components/_popupers.scss
@@ -1,4 +1,3 @@
-@use'../abstracts' as *;
 
 /* COLORS
 ========================================== */
@@ -10,6 +9,9 @@ $orange: #f66867;
 $purple: #8e6ac1;
 $white: #ffffff;
 $black: #000000;
+$clr-warm:hsl(48,100%,76%);
+$clr-cooldark:hsl(184, 63%, 38%);
+$clr-alarm:hsl(306,80%,54.9%);
 
 /* MIXINS
 ========================================== */
@@ -79,6 +81,37 @@ $black: #000000;
 /* BUTTON
 ========================================== */
 
+
+/* POP-UP
+========================================== */
+
+
+.pop-upers {
+  
+  @include transform(translate(-50%, -50%) scale(0.9));
+  @include transition(all .3s);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  
+  overflow-y: auto; 
+  visibility: hidden;
+  box-shadow: 0px 6px 30px rgba(0,0,0,0.4);
+  opacity: 0;
+  
+  z-index: 10;
+  background-color: $white;
+  width: 100%;
+  height: 100%;
+
+  border: 1px solid none;
+  border-radius: 10px;
+  display: grid;
+  place-items: center;
+
+  
+//   height: calc(100% - 15em);
+
 .popbutton {
   position: absolute;
   top: 0;
@@ -130,36 +163,6 @@ $black: #000000;
   }
 }
 
-/* POP-UP
-========================================== */
-
-
-.pop-up {
-  
-  @include transform(translate(-50%, -50%) scale(0.9));
-  @include transition(all .3s);
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  
-  overflow-y: auto; 
-  visibility: hidden;
-  box-shadow: 0px 6px 30px rgba(0,0,0,0.4);
-  opacity: 0;
-  
-  z-index: 10;
-  background-color: $white;
-  width: 100%;
-  height: 100%;
-
-  border: 1px solid none;
-  border-radius: 10px;
-//   transform: translateY(15em);    
-//   height: calc(100% - 15em);
-button{
-    margin: 5px;
-}
-
 .popbut {
   margin: 5px;
   // width: 210px;
@@ -172,7 +175,7 @@ button{
   text-decoration: none;
   margin-top: 2em;
   border-radius: 99em;
-  padding: 1em 5em 1em 5.5em;
+  padding: 1em 4em 1em 4em;
   background: $clr-warm;
   cursor: pointer;
   transition: 0.2s ease;
@@ -199,14 +202,45 @@ button{
   }
   
   .content {
+    display: grid;
+    place-items: center;
+    grid-template-columns: 1fr;
     width: 100%;
     max-width: 900px;
     // overflow: hidden;
     text-align: center;
     position: relative;
+    padding: 5px;
+    //transform: translateY(1em);    
+
     // min-height: 100%;
-    transform: translateY(190px);
-    
+    // border:1px solid;
+    .dyna-input {
+      padding: .7em;
+      border-radius: 10px;
+      background-color:var(--clr-input);
+      text-align: center;
+      color: var(--clr-inputFont);
+      border: 2px solid transparent;
+      outline: none;
+      font-family: var(--fnt);
+      font-weight: 500;
+      font-size: 16px;
+      transition: all 0.2s;
+      width: 90%;
+      transform: translateY(-.7em);
+  }
+  .dyna-input:hover  { 
+      cursor:pointer;
+      background-color :#eeeeee;
+  }
+  .dyna-input:focus {
+      cursor: text;
+      color: #333333;
+      background-color:white;
+      border-color: darkgray;
+  }
+
     @media (min-width: 768px) {
       min-height: inherit;
       transform: translateY(0);
@@ -246,6 +280,7 @@ button{
     
     
     .title {
+      transform: translateY(-.5em);    
       h1 {
         text-align: center;
         color: $orange;
