--- a/src/sass/components/_createDoc.scss
+++ b/src/sass/components/_createDoc.scss
@@ -13,6 +13,7 @@
         background: $clr-coollight;
         place-items: center;
         z-index:800;
+        padding: .7em;
         .selector {
             margin: .5em;
             width:480px;
