--- a/src/sass/components/_content.scss
+++ b/src/sass/components/_content.scss
@@ -78,7 +78,7 @@ body{
 @media screen and (min-width:1200px) {
     .content {
         .wrapper {
-            width:1200px;
+            width:90%;
         }
 
     }
