--- a/src/sass/components/_content.scss
+++ b/src/sass/components/_content.scss
@@ -79,6 +79,9 @@ body{
     .content {
         .wrapper {
             width:90%;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: auto auto;
         }
 
     }
