--- a/src/sass/components/_content.scss
+++ b/src/sass/components/_content.scss
@@ -20,7 +20,7 @@ body{
         min-height: 75vh;
     }
     aside {
-        display:none;
+        // display:none;
         background-color:hsl(48,100%,95%) ;
         min-height: 75vh;
 
