--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -21,4 +21,5 @@
 @use 'components/popupers';
 @use 'components/dynalist';
 @use 'components/dynalistAB';
+@use 'components/accordionDB';
 //sass --watch src/sass:dist/css
