--- a/src/sass/components/_content.scss
+++ b/src/sass/components/_content.scss
@@ -34,6 +34,11 @@ body{
     .timelineContainer {
         display: block;        
         width: 100%;
+        .timeLineWrapper{
+            max-height: 70vh;
+            min-height: 60vh;
+            overflow-y: auto;
+        }
         .splashContent {
             padding-top: 50px;
             display: grid;
